# panin-g-i

./: .gitignore  CMakeLists.txt  README.md  build.vs.2019.cmake
bin.dbg/: lab01.report.md  lab02.report.md
bin.rel/: lab01.report.md  lab02.report.md  lab03.report.md
data/: money100_15.MOV  money100_6.MOV
prj.labs/: CMakeLists.txt
prj.labs/lab01/: lab01.cpp  lab01.report.md.in.txt
prj.labs/lab02/: lab02.cpp  lab02.report.md.in.txt
prj.labs/lab03/: lab03.cpp  lab03.report.md.in.txt
prj.labs/lab04/: lab04.cpp  lab04.report.md.in.txt
prj.labs/test/: CMakeLists.txt  task.cpp  task.report.md.in.txt  test.cpp  test.report.md.in.txt
